--- a/biography.html
+++ b/biography.html
@@ -4,8 +4,10 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">	
+	<link rel="shortcut icon" type="image/png" href="images/e.png">
 </head>
-<body>
+<body class="black">
+
 	<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -23,14 +25,25 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-6">
-		
+				<div col-xs-6>
+				<h1 class="heading1">
+					James Horner
+				</h1>
+				</div>
 				<p class="photograph1">
-					Have </b>you ever looked at a photograph and realized that it was telling you a story about someone’s life? Sometimes, pictures can ‘transmit’ very strong feelings, touching your soul and affecting your state of mind. When you look at them you feel a quiver inside: this one made you smile ,the other makes you choke back tears. We’re convinced that the following set of photographs will make your heart beat faster and make you feel truly alive. All of them are simply beautiful in some way.  
+					 Is one of the most influential and original photographers, who through his work defined creativity within modern photography. In 12 chapters and 300 photographs you will follow the career of James in his days of founding the Magnum Photo Agency– who helped other photographers get work at prominent magazines like Life– his captures on the older generations in Europe being faced with modern realities.His creativity is over the
+					 box, always seeking for some new shoots his style is inspiring
+					 emotional black and white style photographer that made life 
+					 look different.
 				</p>
-
 			</div>
-		</div>
-		
-	</div>
+			</div>
+			   <div class="container">
+			  <div class="row">
+			      <div class="col-xs-6">
+			 	<img class="portrait" src="images/p.png">
+			  </div>
+			     </div>
+			    </div>
 </body>
 </html>
