--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="shortcut icon" type="image/png" href="images/smile.png">
+	<link rel="shortcut icon" type="image/png" href="images/e.png">
 
 </head>
 <body>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">PhShoot</a>
+      <a class="navbar-brand" href="#">EShoot</a>
     </div>
     <ul class="nav navbar-nav">
       <li>
@@ -32,19 +32,19 @@
 		<div class="raw">
 		<div class="col-xs-4 hide-div imaContainer">		
 			<a href="biography.html"><img id="circule" src="images/portrait.png" alt="...">
-			<h1 class="text-center" >Robert Heel</h1>
-			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history.Below are five photographer biographies that are  <br>worth getting your hands on</p></a>
+			<h1 class="text-center" >James Horner</h1>
+			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history.Here are three photographer biographies that are  <br>worth getting your hands on</p></a>
 			<!-- <button><a class="btnDetails" href="#">View ditails </a></button> -->
 		</div>
 		<div class="col-xs-4 hide-div imaContainer">	
 			<a href="biography2.html"><img id="circule" src="images/portrait3.png" alt="...">
-			<h1 class="text-center ">Yulia Kwist</h1>
-			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history. Below are five photographer biographies that are  <br>worth getting your hands on</p></a>	
+			<h1 class="text-center ">Kate Borny</h1>
+			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history. Here are three photographer biographies that are  <br>worth getting your hands on</p></a>	
 		</div>
 		<div class="col-xs-4 hide-div imaContainer">	
 			<a href="biography3.html"><img id="circule" src="images/portrait2.png" alt="...">
-			<h1 class="text-center">Alex Calini</h1>
-			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history.Below are five photographer biographies that are  <br>worth getting your hands on</p></a>				
+			<h1 class="text-center">Alex Aiona</h1>
+			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history.Here are three photographer biographies that are  <br>worth getting your hands on</p></a>				
 		</div>
 		</div>
 	</div>
@@ -120,15 +120,15 @@
 	</div>
 	</div>
 	<hr class="featurette-divider">
-	<div class="footer">
+	<a href="https://twitter.com/twitter"><div class="footer">
 		<img class="twitter" src="images/twitter.png">
-	</div>
+	</div></a>
 	<div class="footer">
-		<img class="facebook" src="images/facebook.png">
-	</div>
+	<a href="https://www.facebook.com">	<img class="facebook" src="images/facebook.png">
+	</div></a>
 	<div class="footer">
-		<img class="instagram" src="images/instagram.png">
-	</div>
+		<a href="https://www.instagram.com/"><img class="instagram" src="images/instagram.png">
+	</div></a>
 	<script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
