--- a/images/EgalleryOne.html
+++ b/images/EgalleryOne.html
@@ -4,15 +4,13 @@
 	<title></title>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="shortcut icon" type="image/png" href="images/e.png">
-	
 </head>
 <body background="images/writer.jpg">
 
 	<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">EShoot</a>
+      <a class="navbar-brand" href="index.html">PhShoot</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active">
