--- a/images/about.html
+++ b/images/about.html
@@ -5,19 +5,18 @@
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">	
-  <link rel="shortcut icon" type="image/png" href="images/e.png">
-  
 </head>
 <body>
 	<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">EShoot</a>
+      <a class="navbar-brand" href="index.html">PhShoot</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active">
       	<a href="about.html">About</a></li>
       <li><a href="EgalleryOne.html">EgalleryOne</a></li>
+      <li><a href="#">Page 2</a></li>
       <li><a href="contact.html">Contact us</a></li>
       <li><a href="price.html">Price</a></li>
     </ul>
