--- a/images/index.html
+++ b/images/index.html
@@ -1,126 +1,140 @@
 <!DOCTYPE html>
-<!-- saved from url=(0052)file:///C:/Users/mariya92/Desktop/webtech/index.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+<head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="shortcut icon" type="image/png" href="images/smile.png">
 
-	<link rel="stylesheet" type="text/css" href="./index_files/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="./index_files/style.css">	
 </head>
 <body>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="file:///C:/Users/mariya92/Desktop/webtech/index.html#">PhShoot</a>
+      <a class="navbar-brand" href="#">PhShoot</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active">
-      	<a href="file:///C:/Users/mariya92/Desktop/webtech/about.html">About</a></li>
-      <li><a href="file:///C:/Users/mariya92/Desktop/webtech/index.html#">Page 1</a></li>
-      <li><a href="file:///C:/Users/mariya92/Desktop/webtech/index.html#">Page 2</a></li>
-      <li><a href="file:///C:/Users/mariya92/Desktop/webtech/index.html#">Contact us</a></li>
+      <li>
+      	<a href="about.html">About</a></li>
+      <li><a href="EgalleryOne.html">EgalleryOne</a></li>
+      <li><a href="contact.html">Contact us</a></li>
+      <li><a href="price.html">Price</a></li>
     </ul>
   </div>
 </nav>
     <ul id="slides">
-      <li class="slide"><a href="file:///C:/Users/mariya92/Desktop/webtech/index.html#"></a></li>
-      <li class="slide"><a href="file:///C:/Users/mariya92/Desktop/webtech/index.html#"></a></li>
-      <li class="slide"><a href="file:///C:/Users/mariya92/Desktop/webtech/index.html#"></a></li>
-      <li class="slide showing"><a href="file:///C:/Users/mariya92/Desktop/webtech/index.html#"></a></li>
+      <li class="slide" class="img-responsive"><a href="#"></a></li>
+      <li class="slide" class="img-responsive"><a href="#"></a></li>
+      <li class="slide" class="img-responsive"><a href="#"></a></li>
+      <li class="slide" class="img-responsive"><a href="#"></a></li>
     </ul>
 	<div class="container">
-		<div class="col-xs-4 hide-div">		
-			<img src="./index_files/portrait.png" class="img img-responsive" alt="...">
-			<h1 class="text-center ">Robert Heel</h1>
-			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history.<b> Below are five photographer biographies that are  <br>worth getting your hands on</b></p><b>
-			<a class="btn btn-secondary" href="file:///C:/Users/mariya92/Desktop/webtech/index.html#">View ditails </a>			
-		</b></div><b>
-		<div class="col-xs-4 hide-div">	
-			<img src="./index_files/portrait3.png" class="img img-responsive" alt="...">
+		<div class="raw">
+		<div class="col-xs-4 hide-div imaContainer">		
+			<a href="biography.html"><img id="circule" src="images/portrait.png" alt="...">
+			<h1 class="text-center" >Robert Heel</h1>
+			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history.Below are five photographer biographies that are  <br>worth getting your hands on</p></a>
+			<!-- <button><a class="btnDetails" href="#">View ditails </a></button> -->
+		</div>
+		<div class="col-xs-4 hide-div imaContainer">	
+			<a href="biography2.html"><img id="circule" src="images/portrait3.png" alt="...">
 			<h1 class="text-center ">Yulia Kwist</h1>
-			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history.<b> Below are five photographer biographies that are  <br>worth getting your hands on</b></p><b>	
-		</b></div><b>
-		<div class="col-xs-4 hide-div">	
-			<img src="./index_files/portrait2.png" class="img img-responsive" alt="...">
+			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history. Below are five photographer biographies that are  <br>worth getting your hands on</p></a>	
+		</div>
+		<div class="col-xs-4 hide-div imaContainer">	
+			<a href="biography3.html"><img id="circule" src="images/portrait2.png" alt="...">
 			<h1 class="text-center">Alex Calini</h1>
-			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history.<b> Below are five photographer biographies that are  <br>worth getting your hands on</b></p><b>	
-				
-		</b></div><b>
-	</b></b></b></div><b><b><b>
-
-<hr class="featurette-divider">
-	                          <!-- ********************************** -->
-	
+			<p class="text-center main-text">Take a closer look into the life of some of the most influential and notable photographers in history.Below are five photographer biographies that are  <br>worth getting your hands on</p></a>				
+		</div>
+		</div>
+	</div>
 	<div class="container">
-		<div class="col-xs-4">
-			<img class="image" src="./index_files/baby.jpg">	
+		<div row>
+			<div class="col-xs-4">
+<hr class="featurette-divider">	
+</div>
+</div>             
+	</div>
+	<div class="container">
+		<div class="col-xs-4 photo-container" >
+			<img id="image" src="images/baby.jpg">	
 		</div>
 		<div class="col-xs-8 text-center context">
-			<h1 class="text">Alex Calini</h1>
+			<h1 class="heading">Alex Calini</h1>
 			<p class="text">Have you ever looked at a photograph and realized that it was telling you a story about someone’s life? Sometimes, pictures can ‘transmit’ very strong feelings, touching your soul and affecting your state of mind. When you look at them you feel a quiver inside: this one made you smile, the other makes you choke back tears.We’re convinced that the following set of photographs will make your heart beat faster and make you feel truly alive. All of them are simply beautiful in some way.</p>
 		</div>
 	</div>
 	                
 	<div class="row container">
 	<div class="col-xs-8 text-center">
-		<h1 class="text">Portrait</h1>
+		<h1 class="heading">Portrait</h1>
 			<p class="text">Have you ever looked at a photograph and realized that it was telling you a story about someone’s life? Sometimes, pictures can ‘transmit’ very strong feelings, touching your soul and affecting your state of mind. When you look at them you feel a quiver inside: this one made you smile, the other makes you choke back tears.We’re convinced that the following set of photographs will make your heart beat faster and make you feel truly alive.All of them are simply beautiful in some way.</p>	
 	</div>
-	<div class="col-xs-4">		
-		<img class="container-img" src="./index_files/woman.jpg">
+	<div class="col-xs-4 photo-container">		
+		<img id="container-img" src="images/woman.jpg">
 	</div>
 	</div>
-
-	<div class="container">
-		<div class="col-xs-4">
-			<img class="image" src="./index_files/facecroped.jpg">	
+    <div class="container">
+		<div class="col-xs-4 photo-container">
+			<img id="image" src="images/facecroped.jpg">	
 		</div>
 		<div class="col-xs-8 text-center context">
-			<h1 class="text">Alex Calini</h1>
+			<h1 class="heading">Alex Calini</h1>
 			<p class="text">Have you ever looked at a photograph and realized that it was telling you a story about someone’s life? Sometimes, pictures can ‘transmit’ very strong feelings,  touching your soul and affecting your state of mind. When you look at them you feel a quiver inside: this one made you smile, the other makes you choke back tears.We’re convinced that the following  set of photographs will make your heart beat faster and make you feel truly alive. All of them are simply beautiful in some way. </p>
 		</div>
 	</div>
 
 	<div class="row container">
 	<div class="col-xs-8 text-center">
-		<h1 class="text">Portrait</h1>
+		<h1 class="heading">Portrait</h1>
 			<p class="text">Have you ever looked at a photograph and realized that it was telling you a story about someone’s life? Sometimes, pictures can ‘transmit’ very strong feelings, touching your soul and affecting your state of mind. When you look at them you feel a quiver inside: this one made you smile, the other makes you choke back tears.We’re convinced that the followingset of photographs will make your heart beat faster and make you feel truly alive.All of them are simply beautiful. </p>	
 	</div>
-	<div class="col-xs-4">		
-		<img class="container-img" src="./index_files/boy.jpg">
+	<div class="col-xs-4 photo-container">		
+		<img id="container-img" src="images/boy.jpg">
+	
 	</div>
 	</div>
-
+	<div id="myModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+  </div>
 		<div class="container">
-		<div class="col-xs-4">
-			<img class="image" src="./index_files/grmother.jpg">	
+		<div class="col-xs-4 photo-container" >
+			<img id="image" src="images/grmother.jpg">	
 		</div>
+	
 		<div class="col-xs-8 text-center context">
-			<h1 class="text">Alex Calini</h1>
+			<h1 class="heading">Alex Calini</h1>
 			<p class="text">Have you ever looked at a photograph and realized that it was telling you a story about someone’s life? Sometimes, pictures can ‘transmit’ very strong feelings,<br> touching your soul and affecting your state of mind.When you look at them you feel a quiver inside: this one made you smile,the other makes you choke back tears.We’re convinced that the following set of photographs will make your heart beat faster and make you feel truly alive.All of them are simply beautiful in some way.</p>
 		</div>
 	</div>
 
 	<div class="row container">
 	<div class="col-xs-8 text-center">
-		<h1 class="text">Portrait</h1>
-			<p class="tellingxt">Have you ever looked at a photograph and realized that it was telling you a story about someone’s life? Sometimes, pictures can ‘transmit’ very strong feelings, touching your soul and affecting your state of mind. When you look at them you feel a quiver inside: this one made you smile,the other makes you choke back tears.We’re convinced that the following set of photographs will make your heart beat faster and make you feel truly alive. All of them are simply beautiful in some way. </p>	
+		<h1 class="heading">Portrait</h1>
+			<p class="text">Have you ever looked at a photograph and realized that it was telling you a story about someone’s life? Sometimes, pictures can ‘transmit’ very strong feelings, touching your soul and affecting your state of mind. When you look at them you feel a quiver inside: this one made you smile,the other makes you choke back tears.We’re convinced that the following set of photographs will make your heart beat faster and make you feel truly alive. All of them are simply beautiful in some way. </p>	
 	</div>
-	<div class="col-xs-4">		
-		<img class="container-img" src="./index_files/beard.jpg">
+	<div class="col-xs-4 photo-container">		
+		<img id="container-img" src="images/beard.jpg">
 	</div>
 	</div>
 	<hr class="featurette-divider">
 	<div class="footer">
-		<img class="twitter" src="./index_files/twitter.png">
+		<img class="twitter" src="images/twitter.png">
 	</div>
 	<div class="footer">
-		<img class="facebook" src="./index_files/facebook.png">
+		<img class="facebook" src="images/facebook.png">
 	</div>
 	<div class="footer">
-		<img class="instagram" src="./index_files/instagram.png">
+		<img class="instagram" src="images/instagram.png">
 	</div>
-	<script src="./index_files/jquery-3.2.1.min.js.Без названия" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 	<script scr="jquery.js"></script>
-	<script src="./index_files/function.js.Без названия"></script>
-
-</b></b></b></body></html>
+	<script src="function.js"></script>
+</body>
+</html>
+<
